--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
@@ -11,7 +11,6 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.jurajbegovac.sample"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
@@ -31,7 +30,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
-
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // Rx
@@ -45,24 +43,11 @@ dependencies {
         exclude module: 'kotlin-runtime'
     }
 
-    compile(project(':rxkotlin-traits')) {
-        exclude group: 'com.android.support'
-        exclude group: 'io.reactivex'
-        exclude module: 'kotlin-stdlib'
-        exclude module: 'kotlin-runtime'
-    }
-
-    testCompile 'junit:junit:4.12'
-
-    testCompile(project(':testutils')) {
-        exclude group: 'com.android.support'
-        exclude group: 'io.reactivex'
-        exclude group: 'junit'
-        exclude module: 'kotlin-stdlib'
-        exclude module: 'kotlin-runtime'
-    }
+    compile 'junit:junit:4.12'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile 'junit:junit:4.12'
 }
