--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -35,19 +35,19 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // Rx
-    compile 'io.reactivex:rxjava:1.2.10'
-    compile('io.reactivex:rxandroid:1.2.1') {
-        exclude module: 'rxjava'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile('io.reactivex.rxjava2:rxandroid:2.0.1') {
+        exclude module: 'rxjava2'
     }
-    compile('io.reactivex:rxkotlin:1.0.0') {
-        exclude module: 'rxjava'
+    compile('io.reactivex.rxjava2:rxkotlin:2.1.0') {
+        exclude module: 'rxjava2'
         exclude module: 'kotlin-stdlib'
         exclude module: 'kotlin-runtime'
     }
 
     compile(project(':rxkotlin-traits')) {
         exclude group: 'com.android.support'
-        exclude group: 'io.reactivex'
+        exclude group: 'io.reactivex.rxjava2'
         exclude module: 'kotlin-stdlib'
         exclude module: 'kotlin-runtime'
     }
@@ -56,7 +56,7 @@ dependencies {
 
     testCompile(project(':testutils')) {
         exclude group: 'com.android.support'
-        exclude group: 'io.reactivex'
+        exclude group: 'io.reactivex.rxjava2'
         exclude group: 'junit'
         exclude module: 'kotlin-stdlib'
         exclude module: 'kotlin-runtime'
